public/scss/models/effects/_popUpVideo.scss
.popup-video__modal {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(28, 30, 32, .98);
	z-index: 1100;
	display: none;
}

.popup-video__modal__close {
	position: absolute;
	top: 0;
	right: 0;
	padding: 30px;
	font-size: 40px;
	color:white;
	cursor: pointer;
}

.popup-video__modal__content {
	left: 50%;
	margin: 0 auto;
	max-width: 1280px;
	position: absolute;
	transform: translate(-50%, 0%);
	width: 100%;
	height: 100%;

	&.no-player {
		height: 0;
		left: 50%;
		margin: 0 auto;
		max-width: 1280px;
		padding-bottom: 56%;
		position: absolute;
		top: 50%;
		transform: translate(-50%, -50%);
		width: 100%;
	}
}

.popup-video__modal__content {
	iframe {
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}
	video {
		left: 0;
		position: absolute;
		top: 50%;
		transform: translate(0,-50%);
		width: 100%;
	}
}

